--- a/aps/App.xaml
+++ b/aps/App.xaml
@@ -2,8 +2,28 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:aps"
+             xmlns:viewModel="clr-namespace:aps.ViewModel"
+             xmlns:view="clr-namespace:aps.Views"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/MenuButtonTheme.xaml"/>
+                <ResourceDictionary Source="Views/UserControls/Resources/ListViewStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+
+            <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
+                <view:HomeView />
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:MoneyViewModel}">
+                <view:MoneyView />
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:EmployeeViewModel}">
+                <view:EmployeeView />
+            </DataTemplate>
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
