--- a/aps/Views/Landing.xaml
+++ b/aps/Views/Landing.xaml
@@ -5,11 +5,12 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:aps.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="400" d:DesignWidth="250"
       Title="Landing">
 
     <Grid Background="White">
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+            <TextBlock Text="APS soluçoes" HorizontalAlignment="Center" FontSize="20" FontWeight="SemiBold" Margin="10"/>
             <Button Content="Entrar"  Height="40" Width="120" Margin="5" Click="Button_Click">
                 <Button.Resources>
                     <Style TargetType="Border">
@@ -18,7 +19,7 @@
                     </Style>
                 </Button.Resources>
             </Button>
-            <Button Content="Registrar" Height="40" Width="120">
+            <Button Content="Registrar" Height="40" Width="120" Click="Register_Click">
                 <Button.Resources>
                     <Style TargetType="Border">
                         <Setter Property="CornerRadius" Value="20"></Setter>
