--- a/aps/Views/AppWindow.xaml
+++ b/aps/Views/AppWindow.xaml
@@ -5,13 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:aps.Views"
         xmlns:viewModel="clr-namespace:aps.ViewModel"
+        WindowStartupLocation="CenterScreen"
         xmlns:userControls="clr-namespace:aps.Views.UserControls"
         mc:Ignorable="d"
-        Title="AppWindow" Height="600" Width="900">
+        Title="ACR Softwares" Height="600" Width="900">
 
-    <Window.DataContext>
-        <viewModel:MainViewModel />
-    </Window.DataContext>
     <Border>
         <Grid>
             <Grid.ColumnDefinitions>
@@ -26,16 +24,24 @@
 
             <!-- Title -->
             <TextBlock Background="Transparent" Grid.Column="1"  Text="© ACR softwares." FontSize="15" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,10,0"></TextBlock>
-            <TextBlock Background="Transparent" Grid.Row="0" Text="{Binding Source={x:Static local:AppWindow.LoggedCompany}, Path=Name}" FontSize="18" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20,15,0,15"></TextBlock>
+            <TextBlock x:Name="lblLoggedCompany" Background="Transparent" Grid.Row="0" FontSize="18" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20,15,0,15"></TextBlock>
             <Border Background="#f5f5f5" Grid.Row="0" Panel.ZIndex="-1"/>
             <Border Background="#f5f5f5" Grid.Row="0" Grid.Column="1" Panel.ZIndex="-1"/>
 
             <!-- Navigation bar -->
-            <StackPanel Background="#ebebeb" Grid.Row="1">
-                <RadioButton Content="Início" Height="50" FontSize="15" Style="{StaticResource MenuButtonTheme}" IsChecked="True" Command="{Binding HomeViewCommand}"/>
-                <RadioButton Content="Movimentações" Height="50" FontSize="15" Style="{StaticResource MenuButtonTheme}" Command="{Binding MoneyViewCommand}"/>
-                <RadioButton Content="Funcionários" Height="50" FontSize="15" Style="{StaticResource MenuButtonTheme}" Command="{Binding EmployeeViewCommand}"/>
-            </StackPanel>
+            <DockPanel Background="#ebebeb" Grid.Row="1">
+                <!-- Botão "Sair" ancorado abaixo -->
+                <RadioButton Content="Sair" Foreground="Red" Height="50" FontSize="15" 
+                 Style="{StaticResource MenuButtonTheme}" DockPanel.Dock="Bottom" 
+                 Command="{Binding LogoutCommand}" Click="Logout_Click"/>
+
+                <!-- Navigation Buttons -->
+                <StackPanel DockPanel.Dock="Top">
+                    <RadioButton Content="Início" Height="50" FontSize="15" Style="{StaticResource MenuButtonTheme}" IsChecked="True" Command="{Binding HomeViewCommand}"/>
+                    <RadioButton Content="Movimentações" Height="50" FontSize="15" Style="{StaticResource MenuButtonTheme}" Command="{Binding MoneyViewCommand}"/>
+                    <RadioButton Content="Funcionários" Height="50" FontSize="15" Style="{StaticResource MenuButtonTheme}" Command="{Binding EmployeeViewCommand}"/>
+                </StackPanel>
+            </DockPanel>
 
             <ContentControl Grid.Row="1"
                             Grid.Column="1"
