--- a/aps/Views/HomeView.xaml
+++ b/aps/Views/HomeView.xaml
@@ -23,9 +23,14 @@
                 </Border.Clip>
 
                 <Grid>
-                    <StackPanel>
-                        <TextBlock Text="Movimentações" HorizontalAlignment="Center" FontSize="17" FontWeight="SemiBold" Margin="10"/>
-                    </StackPanel>
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <TextBlock Grid.Row="0" VerticalAlignment="Center" Text="Movimentações" HorizontalAlignment="Center" FontSize="17" FontWeight="SemiBold" Margin="10"/>
+                    <TextBlock Grid.Row="1" Text="{Binding TotalTransactionsCount, StringFormat='Total: {0}'}" FontSize="26" FontWeight="DemiBold" HorizontalAlignment="Center" Margin="0,10"/>
+                    <TextBlock Grid.Row="2" Text="{Binding TotalTransactionsValue, StringFormat='Valor: {0:C}'}" FontSize="16" HorizontalAlignment="Center"/>
                 </Grid>
                 
             </Border>
@@ -43,9 +48,15 @@
                 </Border.Clip>
 
                 <Grid>
-                    <StackPanel>
-                        <TextBlock Text="Total de funcionários" HorizontalAlignment="Center" FontSize="17" FontWeight="SemiBold" Margin="10"/>
-                    </StackPanel>
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+
+                    <TextBlock Text="Total de funcionários" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="17" FontWeight="SemiBold" Margin="10"/>
+                    <TextBlock Text="{Binding TotalEmployeesCount}" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="26" FontWeight="SemiBold" Margin="10"/>
+
                 </Grid>
 
             </Border>
@@ -64,9 +75,20 @@
             </Border.Clip>
 
             <Grid>
-                <StackPanel>
-                    <TextBlock Text="Sobre" HorizontalAlignment="Center" FontSize="17" FontWeight="SemiBold" Margin="10"/>
-                </StackPanel>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Text="Sobre" Grid.ColumnSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="17" FontWeight="SemiBold"/>
+                <TextBlock Text="{Binding CompanyName, StringFormat='Nome: {0}'}" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="17" />
+                <TextBlock Text="{Binding CompanyCNPJ, StringFormat='CNPJ: {0}'}" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="17" />
+
             </Grid>
 
         </Border>
