--- a/aps/Views/Landing.xaml
+++ b/aps/Views/Landing.xaml
@@ -5,28 +5,14 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:aps.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="400" d:DesignWidth="250"
+      d:DesignHeight="500" d:DesignWidth="300"
       Title="Landing">
 
     <Grid Background="White">
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TextBlock Text="APS soluçoes" HorizontalAlignment="Center" FontSize="20" FontWeight="SemiBold" Margin="10"/>
-            <Button Content="Entrar"  Height="40" Width="120" Margin="5" Click="Button_Click">
-                <Button.Resources>
-                    <Style TargetType="Border">
-                        <Setter Property="CornerRadius" Value="20"></Setter>
-                        <Setter Property="BorderThickness" Value="0"></Setter>
-                    </Style>
-                </Button.Resources>
-            </Button>
-            <Button Content="Registrar" Height="40" Width="120" Click="Register_Click">
-                <Button.Resources>
-                    <Style TargetType="Border">
-                        <Setter Property="CornerRadius" Value="20"></Setter>
-                        <Setter Property="BorderThickness" Value="0"></Setter>
-                    </Style>
-                </Button.Resources>
-            </Button>
+            <TextBlock Text="APS soluçoes" HorizontalAlignment="Center" FontSize="25" FontWeight="SemiBold" Margin="10"/>
+            <Button Content="Entrar" Style="{StaticResource ConfirmButtonStyle}" Height="50" Width="150" Margin="5" Click="Button_Click"></Button>
+            <Button Content="Registrar" Style="{StaticResource ConfirmButtonStyle}" Height="50" Width="150" Click="Register_Click"></Button>
         </StackPanel>
     </Grid>
 </Page>
