--- a/aps/Views/MainWindow.xaml
+++ b/aps/Views/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:aps.Views"
         xmlns:userControls="clr-namespace:aps.Views.UserControls"
+        WindowStartupLocation="CenterScreen"
         mc:Ignorable="d"
-        Title="Window1" Height="400" Width="250">
+        Title="ACR Softwares" Height="500" Width="300">
         <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden"/>
 
 </Window>
